azure/argocd/addons/envoy-gateway-config/http-redirect.yaml
# Auto-generated file, do not edit directly
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: eastus-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "*.eastus-mhaigh.k8sbackup.dev"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
